@darrenmason pointed out that the .navbar-collapse was wight because the hamburger menu dropdown was transparent otherwise, so this was his fix for both of them.

--- a/resources/styles/global/navbar.less
+++ b/resources/styles/global/navbar.less
@@ -35,7 +35,10 @@
   // override the bootstrap defaults with tutor defaults
   &.navbar.navbar{
     border-bottom: 1px solid @border-color;
-    background-color: @tutor-white;
+
+    &, .navbar-collapse.collapsing, .navbar-collapse.in {
+      background-color: @tutor-white;
+    }
   }
 
   .container-fluid { padding: 0 @tutor-navbar-padding-horizontal; }
